--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Explosion.tscn", "res://Entidades/Rabion.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Explosion.tscn"]
 
 [ScriptEditor]
 
