--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([58, 71, 84, 101, 105, 108, 111]),
+"column": 18,
+"folded_lines": Array[int]([58, 84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 0.0,
+"row": 71,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 76,
-"scroll_position": 65.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 76,
-"selection_to_column": 32,
-"selection_to_line": 81,
+"row": 77,
+"scroll_position": 83.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,12 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 16.0,
-"selection": false,
+"row": 35,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 35,
+"selection_to_column": 34,
+"selection_to_line": 35,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,10 +63,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 38.0,
+"row": 43,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
