--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([58, 84, 101, 105, 108, 111]),
+"column": 21,
+"folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 52.0,
+"row": 116,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 83.0,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 35,
-"scroll_position": 0.0,
+"scroll_position": 13.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 35,
@@ -77,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 8.0,
+"row": 2,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
