--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
 "row": 116,
-"scroll_position": 0.0,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 0.0,
+"scroll_position": 85.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 13.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 35,
-"selection_to_column": 34,
-"selection_to_line": 35,
+"row": 11,
+"scroll_position": 18.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 8,
-"selection_to_column": 27,
-"selection_to_line": 13,
+"row": 31,
+"scroll_position": 63.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 77,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"row": 41,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
