Sistema de huida y evasión de paredes
Prototipo, sujeto a cambio
Falta comportamiento de disparo

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
 "row": 116,
-"scroll_position": 99.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 0.0,
+"scroll_position": 55.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +77,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 17.0,
+"row": 77,
+"scroll_position": 57.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 76,
+"selection_to_column": 13,
+"selection_to_line": 77,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Chooty.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
