--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 0.0,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 16,
-"selection_to_column": 16,
-"selection_to_line": 16,
+"row": 52,
+"scroll_position": 29.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 48.0,
+"row": 46,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 69.0,
+"row": 126,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
