Enemigo Chooty terminado
Recomendación: optimizar detección de explosiones de Cuki

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=-28
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=237
-dock_hsplit_3=-216
+dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/blonk.tscn", "res://Entidades/Cuki.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Piedra.tscn", "res://Entidades/Cuki.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/Piedra.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
 open_help=["CharacterBody2D", "PhysicsShapeQueryParameters2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
