--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -2,12 +2,12 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
+"breakpoints": PackedInt32Array(88),
+"column": 12,
 "folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
-"row": 116,
-"scroll_position": 0.0,
+"row": 134,
+"scroll_position": 118.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 55.0,
+"scroll_position": 84.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,16 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 77,
-"scroll_position": 57.0,
+"row": 40,
+"scroll_position": 19.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 76,
-"selection_to_column": 13,
-"selection_to_line": 77,
+"selection_from_column": 2,
+"selection_from_line": 40,
+"selection_to_column": 25,
+"selection_to_line": 40,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +95,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 15.0,
+"row": 79,
+"scroll_position": 79.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Piedra.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
