--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([84, 101, 105, 108, 111]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 83.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 0.0,
+"row": 31,
+"scroll_position": 21.75,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +73,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 66.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 67,
-"selection_to_column": 18,
-"selection_to_line": 68,
+"row": 26,
+"scroll_position": 24.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,7 +91,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 126,
-"scroll_position": 83.0,
+"scroll_position": 103.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 89,
-"scroll_position": 79.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
