--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([84, 101, 105]),
+"column": 25,
+"folded_lines": Array[int]([94, 102, 106]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 24.0,
-"selection": false,
+"row": 84,
+"scroll_position": 69.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 84,
+"selection_to_column": 62,
+"selection_to_line": 84,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 68,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 12.0,
+"row": 87,
+"scroll_position": 73.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 94.0,
+"row": 117,
+"scroll_position": 96.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 3.0,
+"row": 114,
+"scroll_position": 81.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
