--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidad
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
 open_help=["CharacterBody2D", "PhysicsShapeQueryParameters2D", "RayCast2D"]
 script_split_offset=150
 list_split_offset=0
