--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([94, 102, 106]),
 "h_scroll_position": 0,
 "row": 84,
-"scroll_position": 69.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 25,
 "selection_from_line": 84,
@@ -81,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 87,
-"scroll_position": 73.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 117,
-"scroll_position": 96.0,
+"scroll_position": 83.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,7 +109,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 114,
-"scroll_position": 81.0,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/ElementalStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 39,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 59,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
