Shock and water damage Cuki

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -2,12 +2,12 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 29,
+"breakpoints": PackedInt32Array(138),
+"column": 70,
 "folded_lines": Array[int]([106, 114, 118]),
 "h_scroll_position": 0,
-"row": 104,
-"scroll_position": 93.0,
+"row": 137,
+"scroll_position": 103.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
-"scroll_position": 9.0,
+"scroll_position": 75.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,10 +115,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 42,
 "scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
