--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 100,
-"scroll_position": 118.0,
+"row": 121,
+"scroll_position": 114.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 133,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 93,
-"scroll_position": 72.0,
-"selection": false,
+"h_scroll_position": 737,
+"row": 89,
+"scroll_position": 83.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 89,
+"selection_to_column": 133,
+"selection_to_line": 89,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,12 +77,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 33,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 64,
-"scroll_position": 60.0,
-"selection": false,
+"h_scroll_position": 106,
+"row": 87,
+"scroll_position": 79.0,
+"selection": true,
+"selection_from_column": 22,
+"selection_from_line": 87,
+"selection_to_column": 33,
+"selection_to_line": 87,
 "syntax_highlighter": "GDScript"
 }
 
@@ -87,12 +95,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 117,
-"scroll_position": 0.0,
-"selection": false,
+"row": 85,
+"scroll_position": 103.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 85,
+"selection_to_column": 24,
+"selection_to_line": 85,
 "syntax_highlighter": "GDScript"
 }
 
@@ -101,11 +113,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 114,
-"scroll_position": 0.0,
+"row": 100,
+"scroll_position": 45.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Piedra.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
