Sistema de combate terminado

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([]),
+"column": 69,
+"folded_lines": Array[int]([39, 176, 185, 188, 225, 233]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 114.0,
+"row": 166,
+"scroll_position": 153.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 133,
+"column": 26,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 737,
-"row": 89,
-"scroll_position": 83.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 89,
-"selection_to_column": 133,
-"selection_to_line": 89,
+"h_scroll_position": 0,
+"row": 113,
+"scroll_position": 50.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -79,9 +75,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 33,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 106,
+"h_scroll_position": 0,
 "row": 87,
-"scroll_position": 79.0,
+"scroll_position": 83.0,
 "selection": true,
 "selection_from_column": 22,
 "selection_from_line": 87,
@@ -117,7 +113,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 100,
-"scroll_position": 45.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
