Normal explosions w/o effects

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=207
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
+dock_hsplit_2=453
 dock_hsplit_3=-250
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -17,7 +17,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Objetos/ElementalState.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Objetos/ElementalState.tscn", "res://Entidades/Explosion.tscn"]
 
 [ScriptEditor]
 
