--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=207
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=453
-dock_hsplit_3=-250
+dock_hsplit_3=-509
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -17,7 +17,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Explosion.tscn", "res://Entidades/Piedra.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Explosion.tscn", "res://Entidades/Piedra.tscn", "res://Objetos/ElementalState.tscn"]
 
 [ScriptEditor]
 
