Antorcha y bateria implementadas
Cambio de motor grafico para poder trabajar remotamente, cambio temporal.

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
-"folded_lines": Array[int]([39, 182, 194]),
+"column": 114,
+"folded_lines": Array[int]([39, 195]),
 "h_scroll_position": 0,
-"row": 240,
-"scroll_position": 223.0,
+"row": 185,
+"scroll_position": 225.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,8 +49,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 35,
-"scroll_position": 16.0,
-"selection": false,
+"scroll_position": 25.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 35,
+"selection_to_column": 24,
+"selection_to_line": 35,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 1.0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 150,
-"scroll_position": 0.0,
+"h_scroll_position": 43,
+"row": 41,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -164,7 +168,43 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 21,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 21,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Antorcha.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 18,
+"selection_from_line": 19,
+"selection_to_column": 23,
+"selection_to_line": 19,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Bateria.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
