Bloque de hielo implementado

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -17,11 +17,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Bateria.tscn", "res://Entidades/Cuki.tscn", "res://Objetos/ElementalState.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Bateria.tscn", "res://Entidades/Bloque_hielo.tscn", "res://Entidades/Antorcha.tscn", "res://Entidades/Palanca.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Cuki.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Antorcha.gd", "res://Scripts/Barril_b.gd", "res://Scripts/Bateria.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
+open_scripts=["res://Scripts/Antorcha.gd", "res://Scripts/Barril_b.gd", "res://Scripts/Bateria.gd", "res://Scripts/Blonk.gd", "res://Scripts/Bloque_hielo.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
 open_help=["AnimationPlayer", "CharacterBody2D", "CollisionObject2D", "CollisionObject3D", "CPUParticles2D", "Node2D", "Object", "PhysicsShapeQueryParameters2D", "RayCast2D", "SceneTreeTimer", "Sprite2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
