--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([39, 195]),
 "h_scroll_position": 0,
 "row": 185,
-"scroll_position": 225.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 35,
-"scroll_position": 25.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 13,
 "selection_from_line": 35,
@@ -135,9 +135,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 56,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 99,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 15.0,
 "selection": true,
 "selection_from_column": 51,
 "selection_from_line": 15,
@@ -165,16 +165,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 12,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 21,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -183,16 +179,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
+"row": 21,
+"scroll_position": 9.0,
 "selection": true,
-"selection_from_column": 18,
-"selection_from_line": 19,
-"selection_to_column": 23,
-"selection_to_line": 19,
+"selection_from_column": 1,
+"selection_from_line": 21,
+"selection_to_column": 14,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -201,10 +197,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Bloque_hielo.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
