Generacion de dardos y funcionamiento correcto

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=328
-dock_hsplit_3=-232
+dock_hsplit_2=170
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -17,7 +17,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Piedra_a_z.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Burbuja_tar.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Dardo_veneno.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/blonk.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Dardo_veneno.tscn", "res://Entidades/Chooty.tscn"]
 
 [ScriptEditor]
 
