--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([47, 55, 82, 93, 99, 148, 183, 191, 195, 200, 203, 255, 263]),
+"column": 25,
+"folded_lines": Array[int]([82, 93, 99, 148, 191, 195, 200, 203, 258, 266]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 21.0,
+"row": 56,
+"scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 8.0,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 122,
-"scroll_position": 115.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 122,
-"selection_to_column": 25,
-"selection_to_line": 122,
+"row": 119,
+"scroll_position": 101.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 104,
+"column": 10,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 158,
-"row": 25,
-"scroll_position": 13.0,
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
-"folded_lines": Array[int]([92, 108, 120, 144]),
+"column": 44,
+"folded_lines": Array[int]([92, 108, 123, 147]),
 "h_scroll_position": 0,
-"row": 144,
-"scroll_position": 103.0,
+"row": 121,
+"scroll_position": 96.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -108,8 +104,8 @@ state={
 "column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 156,
-"scroll_position": 152.0,
+"row": 174,
+"scroll_position": 179.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,7 +119,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 36,
-"scroll_position": 11.0,
+"scroll_position": 59.0,
 "selection": true,
 "selection_from_column": 3,
 "selection_from_line": 36,
@@ -197,11 +193,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
+"row": 12,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
