uploading testing totem

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -10,6 +10,17 @@ dock_hsplit_1=0
 dock_hsplit_2=185
 dock_hsplit_3=-232
 dock_hsplit_4=0
+dock_1_selected_tab_idx=0
+dock_2_selected_tab_idx=0
+dock_3_selected_tab_idx=0
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=0
+dock_6_selected_tab_idx=0
+dock_7_selected_tab_idx=0
+dock_8_selected_tab_idx=0
+dock_floating={}
+dock_filesystem_selected_paths=PackedStringArray("res://Pruebas.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entidades/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -17,7 +28,12 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/blonk.tscn", "res://Objetos/ElementalState.tscn", "res://Entidades/Totem.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Chooty.tscn"]
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/blonk.tscn", "res://Objetos/ElementalState.tscn", "res://Entidades/Totem.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Chooty.tscn")
+current_scene="res://Pruebas.tscn"
+center_split_offset=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
@@ -25,6 +41,7 @@ open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scri
 open_help=["AnimationPlayer", "CharacterBody2D", "CollisionObject2D", "CollisionObject3D", "CPUParticles2D", "Node2D", "Object", "PhysicsShapeQueryParameters2D", "RayCast2D", "SceneTreeTimer", "Sprite2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
+selected_script="res://Scripts/Totem.gd"
 
 [editor_log]
 
@@ -35,3 +52,9 @@ log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
+
+[ShaderEditor]
+
+open_shaders=[]
+split_offset=0
+selected_shader=""
