--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -113,7 +113,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 150,
-"scroll_position": 118.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -154,12 +154,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(15, 19, 23),
-"column": 1,
+"breakpoints": PackedInt32Array(),
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 5.0,
+"row": 25,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
