Arreglos Generacion de Totem
Abrir en Godot 4.0.x

--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 25,
 "folded_lines": Array[int]([39, 182, 194, 241]),
 "h_scroll_position": 0,
-"row": 234,
-"scroll_position": 189.0,
+"row": 87,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 122,
-"scroll_position": 88.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 122,
-"selection_to_column": 25,
-"selection_to_line": 122,
+"row": 53,
+"scroll_position": 42.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -141,7 +137,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 36.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 51,
 "selection_from_line": 15,
@@ -155,11 +151,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 7.0,
+"row": 24,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
