--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=185
+dock_hsplit_2=170
 dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/blonk.tscn", "res://Objetos/ElementalState.tscn", "res://Entidades/Totem.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Chooty.tscn")
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Totem.tscn", "res://Entidades/Rabion.tscn"]
 current_scene="res://Pruebas.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
