Corazones completamente implementados

--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=256
-dock_hsplit_3=-216
+dock_hsplit_2=170
+dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -17,11 +17,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Vida.tscn", "res://Objetos/gener_ayudas.tscn", "res://Entidades/Rabion.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Objetos/gener_ayudas.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Vida.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/ElementalStateMachine.gd", "res://Scripts/GenerAyudas.gd", "res://Scripts/Rabion.gd"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Burbuja_tar.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Dardo_veneno.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/GenerAyudas.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Vida.gd"]
 open_help=[]
 script_split_offset=150
 list_split_offset=0
