--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([82, 93, 99, 148, 191, 195, 200, 203, 258, 266]),
+"column": 12,
+"folded_lines": Array[int]([4, 191, 195, 200, 203, 261, 269]),
 "h_scroll_position": 0,
-"row": 56,
-"scroll_position": 0.0,
-"selection": false,
+"row": 188,
+"scroll_position": 167.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 188,
+"selection_to_column": 12,
+"selection_to_line": 188,
 "syntax_highlighter": "GDScript"
 }
 
@@ -34,8 +38,8 @@ state={
 "column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 50.0,
+"row": 27,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 23,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
+"h_scroll_position": 123,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 0.0,
+"row": 80,
+"scroll_position": 74.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 26,
 "folded_lines": Array[int]([92, 108, 123, 147]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([28, 34, 39, 82, 95, 109, 117, 138, 146, 154, 160, 163, 176, 180, 184, 187]),
+"column": 28,
+"folded_lines": Array[int]([28, 82, 95, 109, 117, 138, 146, 154, 160, 163, 176, 180, 184, 187]),
 "h_scroll_position": 0,
-"row": 209,
-"scroll_position": 0.0,
+"row": 39,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,16 +119,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 61,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 36,
-"selection_to_column": 61,
-"selection_to_line": 36,
+"row": 53,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,11 +151,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 17,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -179,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -193,11 +193,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 17,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -210,7 +210,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -221,11 +221,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 1.0,
+"row": 14,
+"scroll_position": 2.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Puerta.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
