--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 13,
 "folded_lines": Array[int]([4, 191, 195, 200, 203, 269]),
 "h_scroll_position": 0,
-"row": 189,
-"scroll_position": 176.0,
+"row": 50,
+"scroll_position": 161.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,11 +34,11 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 23,
+"breakpoints": PackedInt32Array(33),
+"column": 11,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 123,
-"row": 15,
+"h_scroll_position": 0,
+"row": 30,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([92, 108, 123, 147]),
 "h_scroll_position": 0,
 "row": 27,
-"scroll_position": 16.0,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 172,
-"row": 152,
-"scroll_position": 130.0,
+"h_scroll_position": 0,
+"row": 66,
+"scroll_position": 56.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -221,7 +221,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,11 +231,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 84,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 35,
-"scroll_position": 43.0,
-"selection": false,
+"h_scroll_position": 71,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 84,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
