--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -8,19 +8,19 @@ dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=249
-dock_hsplit_3=-232
+dock_hsplit_3=-238
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Componentes/ElementalStateMachine.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Componentes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Objetos/Salud.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Componentes/", "res://Objetos/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Objetos/ElementalState.tscn")
-current_scene="res://Pruebas.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Objetos/ElementalState.tscn", "res://Objetos/Salud.tscn")
+current_scene="res://Objetos/ElementalState.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Burbuja_tar.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Vida.gd"]
-open_help=["Salud"]
+open_help=["ElementalState", "Salud"]
 script_split_offset=150
 list_split_offset=0
 selected_script="res://Scripts/Componentes/ElementalStateMachine.gd"
