--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Objetos/Salud.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Componentes/", "res://Objetos/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Explosion.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Componentes/", "res://Objetos/", "res://Entidades/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,20 +28,19 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Objetos/ElementalState.tscn", "res://Objetos/Salud.tscn")
-current_scene="res://Objetos/ElementalState.tscn"
+open_scenes=PackedStringArray("res://Pruebas.tscn", "res://Entidades/Explosion.tscn")
+current_scene="res://Entidades/Explosion.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Burbuja_tar.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Vida.gd"]
-open_help=["ElementalState", "Salud"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Burbuja_tar.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Dardo_veneno.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Palanca.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Vida.gd"]
+open_help=["ElementalState", "Input", "Salud"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Componentes/ElementalStateMachine.gd"
+selected_script="res://Scripts/Explosion.gd"
 
 [editor_log]
 
