--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([4, 191, 195, 200, 203, 269]),
+"column": 4,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 161.0,
+"row": 346,
+"scroll_position": 355.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 56.0,
+"row": 19,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -233,9 +233,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 84,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 71,
+"h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 3.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
